Small changes and fixed image alignment

--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,14 @@ html {
   scroll-behavior: smooth;
 }
 
+h1 {
+  font-size: 48px;
+}
+
+p {
+  font-size: 19px;
+}
+
 body {
   line-height: 1.5;
   letter-spacing: 0.12rem;
@@ -40,7 +48,6 @@ button {
   font-size: 23px;
   background-color: transparent;
   color: var(--foreground);
-  display: inline-block;
   position: relative;
 }
 
@@ -54,6 +61,7 @@ button::after {
   height: 6px;
   bottom: 0;
   left: 0;
+  border-radius: 50px;
   background-color: var(--accent);
   transform-origin: bottom left;
   transition: transform 200ms ease-in-out, opacity 200ms ease-in-out;
