--- a/css/text_editor.css
+++ b/css/text_editor.css
@@ -2,6 +2,15 @@ html {
   font-size: 100%; /*16px*/
 }
 
+header::after {
+  content: '';
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
 body {
   line-height: 1.5;
   letter-spacing: 0.12rem;
@@ -13,41 +22,12 @@ body {
   position: fixed;
   background-color: var(--background);
   padding: 16px;
+  width: 100%;
+  border-bottom: 2px solid var(--foreground);
 }
 
 button img {
   color: var(--foreground);
-}
-
-#text-editor {
-  width: 100%;
-  min-height: 450px;
-  height: fit-content;
-  color: var(--foreground);
-  margin: 0 auto;
-  text-align: left;
-  caret-color: var(--foreground);
-  padding: 16px;
-}
-
-[contenteditable] {
-  outline: 0px solid transparent;
-}
-
-#text-editor div + div {
-  margin-top: 2rem;
-}
-
-#text-editor img + div {
-  margin-top: 2rem;
-}
-
-#text-editor div + img {
-  margin-top: 2rem;
-}
-
-#text-editor img + img {
-  margin-top: 2rem;
 }
 
 .text-formating-buttons button img {
@@ -72,11 +52,51 @@ button img {
   gap: 8px;
 }
 
-/* Fjærne opp og ned pil i input https://www.geeksforgeeks.org/how-to-disable-arrows-from-number-input/ */
-#font-size::-webkit-outer-spin-button,
-#font-size::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+option {
+  background-color: var(--background);
+  margin: 0 8px;
+}
+
+#text-editor {
+  width: 100%;
+  min-height: 450px;
+  height: fit-content;
+  color: var(--foreground);
+  margin: 0 auto;
+  text-align: left;
+  caret-color: var(--foreground);
+  padding: 16px;
+  display: block !important;
+  overflow-wrap: break-word;
+}
+
+[contenteditable] {
+  outline: 0px solid transparent;
+}
+
+#text-editor div + div {
+  margin-top: 2rem;
+}
+
+#text-editor img + div {
+  margin-top: 2rem;
+}
+
+#text-editor div + img {
+  margin-top: 2rem;
+}
+
+#text-editor img + img {
+  margin-top: 2rem;
+}
+
+#text-editor div img {
+  width: 50%;
+}
+
+#text-editor img {
+  margin-left: auto;
+  padding-left: 20px;
 }
 
 /* Inspirasjon for drop down pil https://stackoverflow.com/questions/14218307/select-arrow-style-change */
